# lua-wyhash

./: CMakeLists.txt  README.markdown
src/: lwyhash.c
